# mirage-benchmark

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  QUICKSTART.md  README.md  call_llm.py  context_retrieved.py  deduplication.py  domain_expert.py  main.py  md_to_semantic_chunks.py  pyproject.toml  qa_gen_multi_hop.py  rerankers_text_qa_llm.py  run_mirage.py  setup.py
.github/workflows/: ci.yml  publish-pypi.yml
SemanticChunks/: .gitkeep
assets/: mirage_qa_gen.html
data/documents/: .gitkeep
demo/: fastapi_service.py
examples/: 01_quick_start.py  02_advanced_config.py  03_from_config_file.py  04_results_analysis.py  05_openai_backend.py  06_method_chaining.py
output/: .gitkeep
results/: .gitkeep
results/example/: .gitkeep
src/mirage/: __init__.py  api.py  cli.py  config.yaml.example  main.py  run_mirage.py
src/mirage/core/: config.py  llm.py  prompts.py
src/mirage/embeddings/: models.py  rerankers_multimodal.py
src/mirage/evaluation/: metrics.py  metrics_optimized.py
src/mirage/pipeline/: chunker.py  context.py  deduplication.py  domain.py  pdf_processor.py  qa_generator.py
src/mirage/utils/: ablation.py  checkpoint.py  llm_cache.py  preflight.py  stats.py  visualize_multihop.py  visualize_pipeline.py
trials/: .gitkeep
