[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirage-bench"
version = "1.0.0"
description = "MiRAGE: A Multiagent Framework for Generating Multimodal Multihop QA Datasets for RAG Evaluation"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "MiRAGE Authors"}
]
maintainers = [
    {name = "MiRAGE Authors"}
]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "question-answering",
    "multimodal",
    "evaluation",
    "benchmark",
    "nlp",
    "llm",
    "vlm",
    "dataset-generation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "Pillow>=9.0.0",
    "transformers>=4.44.0",
    "huggingface_hub>=0.16.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "tqdm>=4.65.0",
    "PyYAML>=6.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "bertopic>=0.16.0",
    "umap-learn>=0.5.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
# GPU support
gpu = [
    "faiss-gpu>=1.7.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.20.0",
]

# PDF processing
pdf = [
    "docling>=0.1.0",
    "pypdfium2>=4.0.0",
]

# Evaluation metrics (RAGAS)
eval = [
    "ragas>=0.1.0",
    "datasets>=2.0.0",
    "langchain>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langchain-openai>=0.1.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

# All dependencies
all = [
    "mirage-bench[gpu,pdf,eval,dev]",
]

[project.urls]
Homepage = "https://github.com/your-org/mirage-bench"
Documentation = "https://github.com/your-org/mirage-bench#readme"
Repository = "https://github.com/your-org/mirage-bench"
Issues = "https://github.com/your-org/mirage-bench/issues"

[project.scripts]
mirage = "main:main"
mirage-preflight = "preflight_check:main"

[tool.setuptools]
packages = ["mirage"]
package-dir = {"mirage" = "."}

[tool.setuptools.package-data]
mirage = ["*.yaml", "*.md"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | archive
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
