[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirage-benchmark"
version = "1.2.7"
description = "A Multiagent Framework for Generating Multimodal Multihop QA Datasets for RAG Evaluation"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "MiRAGE Authors", email = "contact@example.com"}
]
maintainers = [
    {name = "MiRAGE Authors", email = "contact@example.com"}
]
keywords = ["rag", "multimodal", "qa", "dataset", "generation", "llm", "vlm", "evaluation", "benchmark"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    # === Core ML/DL ===
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "scipy>=1.10.0",
    "Pillow>=10.0.0",

    # === Transformers & Embeddings ===
    "transformers>=4.44.0",
    "huggingface_hub>=0.23.2,<1.0",
    "sentence-transformers>=2.2.0",
    "safetensors>=0.4.0",
    "tokenizers>=0.20.0",

    # === Quantization & Acceleration ===
    "bitsandbytes>=0.43.0",
    "accelerate>=0.20.0",
    "peft>=0.11.0",

    # === Multimodal Embeddings ===
    "colpali-engine>=0.3.0",

    # === PDF & Document Processing ===
    "docling>=2.0.0",
    "docling-core>=2.0.0",
    "pypdfium2>=4.0.0",
    "easyocr>=1.7.0",
    "opencv-python-headless>=4.8.0",

    # === Vector Search & Retrieval ===
    "faiss-cpu>=1.7.0",

    # === Topic Modeling & Visualization ===
    "bertopic>=0.16.0",
    "umap-learn>=0.5.0",
    "datamapplot>=0.4.0",
    "plotly>=5.0.0",
    "matplotlib>=3.5.0",

    # === Data & Config ===
    "pandas>=1.5.0",
    "scikit-learn>=1.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",

    # === Networking ===
    "requests>=2.28.0",
    "aiohttp>=3.8.0",

    # === Gemini API ===
    "google-generativeai>=0.5.0",
]

[project.optional-dependencies]
eval = [
    "ragas>=0.1.0",
    "datasets>=2.0.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-google-genai>=1.0.0",
    "langchain-openai>=0.1.0",
    "tiktoken>=0.5.0",
]
dev = [
    "pytest>=7.0.0",
    "flake8>=5.0.0",
    "black>=22.0.0",
    "twine>=4.0.0",
    "build>=0.10.0",
]
all = [
    "mirage-benchmark[eval,dev]",
]

[project.urls]
Homepage = "https://github.com/ChandanKSahu/MiRAGE"
Documentation = "https://github.com/ChandanKSahu/MiRAGE#readme"
Repository = "https://github.com/ChandanKSahu/MiRAGE.git"
Issues = "https://github.com/ChandanKSahu/MiRAGE/issues"

[project.scripts]
mirage = "mirage.cli:main"
mirage-preflight = "mirage.utils.preflight:main"
run_mirage = "mirage.run_mirage:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yaml.example", "*.json", "*.txt"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
